docs: improve readmes

--- a/GlobalizationFront/index.html
+++ b/GlobalizationFront/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Localization Example</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <div class="container">
-        <label for="language-select" id="label-language"></label>
-        <select id="language-select">
-            <option value="en"></option>
-            <option value="pt-BR"></option>
-            <option value="pt-PT"></option>
-            <option value="pt"></option>
-        </select>
-        <h1 id="message"></h1>
+      <label for="language-select" id="label-language"></label>
+      <select id="language-select">
+        <option value="en"></option>
+        <option value="pt-BR"></option>
+        <option value="pt-PT"></option>
+        <option value="pt"></option>
+      </select>
+      <h1 id="message"></h1>
     </div>
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
