--- a/GlobalizationFrontModular/index.html
+++ b/GlobalizationFrontModular/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,6 +17,6 @@
       </select>
       <h1>#message#</h1>
     </main>
-    <script src="app.js" type="module"></script>
+    <script src="app.mjs" type="module"></script>
   </body>
 </html>
